--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.8.4",
     "@mui/joy": "^5.0.0-alpha.36",
     "@mui/material": "^5.9.0",
     "@mui/styles": "^5.9.0",
+    "@mui/x-date-pickers": "^5.0.0-beta.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,6 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "stop": "npx kill-port 3000",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
