--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "date-fns": "^2.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-form-validator-core": "^1.1.2",
+    "react-material-ui-form-validator": "^3.0.1",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
