--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-chart": "^3.0.4",
+    "@devexpress/dx-react-chart-material-ui": "^3.0.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@material-ui/core": "^4.12.4",
@@ -17,6 +19,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.28.0",
+    "devextreme-react": "^22.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-form-validator-core": "^1.1.2",
