--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.8.4",
     "@mui/joy": "^5.0.0-alpha.36",
     "@mui/material": "^5.9.0",
