--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@devexpress/dx-react-chart-material-ui": "^3.0.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@material-table/core": "^5.0.4",
     "@material-ui/core": "^4.12.4",
     "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.8.4",
@@ -22,6 +23,7 @@
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "devextreme-react": "^22.1.3",
+    "material-table": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-form-validator-core": "^1.1.2",
